# webgpu

./: .gitmodules  README.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  labeler.yml  native.yml  web.yml
browser/: bun.lockb  package.json
native/: .gitignore  CMakeLists.txt  README.md
native/src/: main.cpp
web/: .editorconfig  README.md  bun.lockb  next.config.js  package.json  tailwind.config.ts  tsconfig.json  wgsl.d.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/PlaygroundCanvas/: PlaygroundCanvas.tsx  index.ts  shader.wgsl
